--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "mongoose": "^4.11.11",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
